--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "@waline/client": "^3.5.1",
+    "@waline/client": "3.4.3",
     "vitepress": "^1.6.3",
     "vue-router": "^4.5.0"
   }
