--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@waline/client": "3.4.1",
     "vitepress": "^1.6.3",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "@traptitech/markdown-it-spoiler": "^1.1.6"
   }
 }
